// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SidePanel /> component its snapshot matches story Default 1`] = `
.c0 {
  background-color: white;
  bottom: 0;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 2rem;
  position: fixed;
  top: 0;
  -webkit-transition: -webkit-transform 0.25s ease-out;
  -webkit-transition: transform 0.25s ease-out;
  transition: transform 0.25s ease-out;
  width: 100vw;
  z-index: 16;
  left: calc(-100vw - 1rem);
  -webkit-transform: translateX(calc(100vw + 1rem));
  -ms-transform: translateX(calc(100vw + 1rem));
  transform: translateX(calc(100vw + 1rem));
  max-width: 80vw;
}

.c0 ~ .SidePanelstyles__SidePanelMain-sc-18iyri2-0 {
  -webkit-transition: -webkit-transform 0.25s ease-out,margin 0.25s ease-out;
  -webkit-transition: transform 0.25s ease-out,margin 0.25s ease-out;
  transition: transform 0.25s ease-out,margin 0.25s ease-out;
}

.c1 {
  height: 100%;
  margin-bottom: 2rem;
  overflow-y: auto;
  padding: 0 2rem 0 2rem;
}

.c1::-webkit-scrollbar {
  width: 0;
}

.c2 {
  background: transparent;
  position: fixed;
  left: 0;
  top: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  z-index: 10;
  overscroll-behavior: none;
  -webkit-transition: background 0.25s ease-out;
  transition: background 0.25s ease-out;
}

@media (min-width:672px) {
  .c0 {
    width: 28rem;
    left: calc(-28rem - 1rem);
    -webkit-transform: translateX(calc(28rem + 1rem));
    -ms-transform: translateX(calc(28rem + 1rem));
    transform: translateX(calc(28rem + 1rem));
  }
}

<div>
  <div>
    <div
      class="c0"
      mode="onTop"
    >
      <div
        class="c1"
      >
        <p>
          Quis molestiae tempora eligendi omnis quisquam quisquam quos. Dolor voluptatibus velit nobis culpa deleniti. Reprehenderit in nisi et. Quia odio et inventore eligendi in deserunt id. Sit odio quia vitae provident quo provident molestiae.
        </p>
      </div>
    </div>
    <div
      class="c2"
    />
    <div
      class="SidePanelstyles__SidePanelMain-sc-18iyri2-0"
    >
      <p>
        Pariatur quos est quod laborum. Quisquam esse quia expedita commodi. Tempora ut exercitationem doloribus harum. Sunt omnis et accusantium et quia quos sequi molestiae. Enim necessitatibus molestiae.
      </p>
      <p>
         
Eligendi rerum excepturi et laudantium fuga similique fugit corporis voluptatem. Esse nobis et sint magnam aut. Dolores maiores incidunt occaecati iusto laborum. Quia deleniti dolorem quibusdam id veniam perspiciatis et nisi. Corporis laboriosam esse. Soluta accusamus officiis ut excepturi blanditiis libero ut.
      </p>
      <p>
         
Fuga enim tempore non voluptas quia vitae ipsam voluptas. Et dolor adipisci dolores sunt non explicabo occaecati rerum nesciunt. Sint est asperiores sit voluptatum mollitia enim iste. Nesciunt minima sequi voluptas optio aut voluptatem. Eligendi voluptates iste eius iure commodi molestiae.
      </p>
      <p>
         
Quo ex reprehenderit ipsa incidunt corporis vel in unde. Iste asperiores consequatur ex quidem omnis inventore deserunt. Eligendi officiis voluptatem. In omnis labore consequatur nisi. Excepturi doloremque nam omnis odit labore magni rerum quia. Distinctio adipisci nulla exercitationem omnis illum.
      </p>
      <p>
         
Eum cum ipsam consequatur ex accusamus ipsum. Eum inventore laboriosam deleniti omnis occaecati. Culpa occaecati nemo alias et doloribus expedita. Ut quia ut nostrum ducimus occaecati veniam ut exercitationem voluptatibus. Quaerat porro error sint aut aliquid qui. Minus officiis neque dolorem animi maiores et aliquid.
      </p>
      <p>
         
Beatae et molestiae consequatur sed rerum qui voluptates unde. Explicabo accusantium exercitationem illum. Et similique illo blanditiis et facere rem quod molestias ab. Impedit aliquam quo vel dolorem consequatur. Consequatur quis nobis nemo asperiores nam ea aut consectetur. Corrupti necessitatibus quas optio ea odio sit odio.
      </p>
      <p>
         
Id error ut dicta aut qui qui vel voluptatum. Ipsum molestiae inventore placeat nesciunt. Laboriosam facere odio beatae nobis vero quia.
      </p>
      <p>
         
Voluptates molestiae magni beatae vitae atque eos. In vitae nihil accusamus natus et quia dolores. Dolores vel quis totam. Consequatur voluptas consequatur expedita omnis laudantium recusandae error culpa nihil. Quis porro voluptatem vel. Libero fugiat doloremque deserunt quidem totam aperiam tempore.
      </p>
      <p>
         
Rem cumque quia delectus perspiciatis sunt. Inventore et officia. Facere assumenda excepturi sunt et aut corporis cumque quos distinctio. Ab quia autem consectetur occaecati nemo molestiae nisi temporibus soluta. Illo deleniti aut sit id quia.
      </p>
      <p>
         
Placeat amet sed esse aut doloribus dolores ut ipsum. Nobis sint non sunt fuga laudantium ipsam quas quos ipsam. Quae dolores et quia explicabo ducimus labore ipsa consequatur. Saepe voluptate ipsa quis corporis. Voluptatibus vel ut non fuga.
      </p>
      <p>
         
Sed atque repellendus. Iusto autem beatae aspernatur sit laudantium occaecati sapiente deleniti nisi. Quibusdam aspernatur quibusdam mollitia quia. Dignissimos id porro corporis. Eveniet consectetur culpa delectus quo et.
      </p>
      <p>
         
Rerum accusantium repudiandae ut ab quas vel et error. Dolores ut in autem quia numquam voluptatibus odit in incidunt. Ullam in harum maxime veniam in commodi voluptas. Voluptatibus consequatur dolorem. Voluptatum neque unde mollitia iusto nostrum exercitationem.
      </p>
      <p>
         
Accusantium quo necessitatibus et sit tenetur. Voluptatum omnis debitis quae. Quo ut ut omnis officiis qui impedit aliquid a. Et cum officiis cumque ex praesentium non quasi voluptatem repellat. Quidem fugiat et nulla ratione quia quo mollitia minima sit.
      </p>
      <p>
         
Vitae consequatur similique dicta commodi tempora voluptatem officiis. Commodi ex ut porro similique et tempora delectus. Veniam distinctio dolore ullam beatae quam saepe. Aperiam recusandae quos officia alias hic. Iste laboriosam et harum alias sit deleniti necessitatibus molestiae qui.
      </p>
      <p>
         
Ab nihil voluptate. Quis ut vero aut accusantium rem et eaque soluta excepturi. Occaecati est culpa vel quo suscipit aliquid aliquid voluptates reprehenderit.
      </p>
      <p>
         
Reprehenderit consequatur ea et aut itaque totam voluptates est. Ullam quidem saepe ad deleniti. Veniam suscipit quam voluptas. Aut est qui id impedit rem.
      </p>
      <p>
         
Nihil quo dolore quisquam sed excepturi ullam. Ratione suscipit sunt ut id culpa commodi architecto. Soluta consectetur quisquam cum omnis numquam quas. Vitae quod culpa natus et. Officia perspiciatis quisquam eligendi dicta. Voluptatibus culpa quia incidunt aut maxime quas omnis dignissimos velit.
      </p>
      <p>
         
Quam laudantium accusamus dolor possimus labore dolores sit dolor. Omnis expedita error est et est ea sed occaecati rem. Consequatur doloremque cum illo consequatur sed.
      </p>
      <p>
         
Ut molestiae rerum magni quos quis enim est. Quod non et quam impedit. Voluptatem nulla voluptatibus blanditiis.
      </p>
      <p>
         
Sed recusandae atque ipsam voluptatum. Et ipsa cupiditate impedit dolorem atque nihil dignissimos culpa eaque. Ipsa qui sit laudantium rerum temporibus et aut consequatur.
      </p>
      <p>
         
Assumenda quia totam dolorem molestiae commodi sit. Corporis molestias atque exercitationem molestiae hic ratione illum soluta. Aut aut et maiores sunt.
      </p>
      <p>
         
Expedita laborum voluptate et quaerat inventore vitae iure. Minus enim dolores in similique. Voluptatem tenetur sit aut. Fuga nulla odio rerum nihil ullam.
      </p>
      <p>
         
Accusamus officia minima aspernatur voluptatem explicabo sint error et possimus. Eos cupiditate quis aut doloribus. Ut quo aliquid. Corrupti distinctio id earum consequatur dolore.
      </p>
      <p>
         
Expedita accusantium nesciunt. Voluptates molestiae qui totam totam autem est perspiciatis. Vero deleniti et dolore ut ea est sed dolores.
      </p>
      <p>
         
Sed laborum maiores labore. Nihil qui aliquid rerum minima. Repellat et ipsa a facilis omnis eaque. Omnis dolorum incidunt sit sunt. Est illo minus. Cum sed ab quia exercitationem similique qui a quis dolore.
      </p>
      <p>
         
Magni occaecati laborum illo doloribus molestias ut. Modi amet alias. Voluptatibus suscipit aut veniam sint iure esse similique maxime. Non amet reprehenderit odit at quod consequuntur. Saepe vel dolores maiores molestiae est nemo dolor sint. Sint eos aut velit vero corporis et voluptatibus corporis voluptas.
      </p>
      <p>
         
Mollitia cum odio est recusandae enim qui maxime voluptatum. Et natus ea labore. Possimus aspernatur dolorem eius odit quia et ratione ducimus veniam. Dolor omnis cupiditate ut aperiam eveniet voluptatibus et et at.
      </p>
      <p>
         
Distinctio autem vel minima dolores est error perferendis qui doloremque. Illo dolore fugit cupiditate placeat sed saepe porro. Ea a quibusdam deleniti et et eaque sed unde est.
      </p>
      <p>
         
Similique similique quia nemo. At possimus in aut nemo illum eveniet. Ea provident commodi iure. Dolore sed est non eaque rerum omnis ex non. Debitis consequuntur occaecati eum aperiam. Qui dolor quibusdam ad quos.
      </p>
      <p>
         
Et voluptatem officiis veniam eveniet delectus. Et accusamus rerum deserunt est. Vero suscipit at dolores a et optio eius aut. Minus blanditiis id nulla porro voluptatem porro eaque ipsa. Sint quod autem.
      </p>
      <p>
         
Nam laudantium non iusto. Ea qui quia mollitia cupiditate et ducimus impedit nam. Unde atque accusantium odio doloremque omnis cumque alias. Aut sapiente unde debitis deleniti totam consequuntur fuga. Blanditiis est modi aliquid autem omnis aut expedita nam natus.
      </p>
      <p>
         
Voluptatum quia delectus voluptas doloremque et voluptatem. Ullam facere earum reiciendis. Maiores neque temporibus voluptatibus et placeat quia ut et non.
      </p>
      <p>
         
Aut reprehenderit iste expedita omnis est vel voluptas doloremque dolor. Totam neque voluptatem occaecati ex omnis tenetur est. Minima nobis nihil suscipit natus asperiores.
      </p>
      <p>
         
Commodi adipisci nesciunt aspernatur modi earum ex rerum. Dolorum saepe sit. Tempora facere et laudantium officiis dolore. Nihil consequatur et ad repellat sed.
      </p>
      <p>
         
Facilis tenetur et. Et dolorem in quia minima expedita porro voluptas facilis. Dolores neque eum maiores debitis tempora impedit officia veniam. Et delectus dignissimos expedita doloribus qui est. Vero voluptas praesentium odit sed alias modi.
      </p>
      <p>
         
Et autem voluptas similique consequatur aliquid aut iste eum. Assumenda impedit odio consectetur. Nemo architecto laboriosam deleniti consequatur totam nihil voluptatem eum. Quia et iure dignissimos quibusdam aspernatur provident quia et enim. Atque at laboriosam architecto est qui. Maxime accusamus fuga asperiores dicta eius.
      </p>
      <p>
         
Non pariatur deserunt rerum error nostrum saepe. Magnam perferendis quia debitis libero veritatis autem minus. Asperiores quis et cum. Et mollitia nam fuga. Libero earum ipsum eos.
      </p>
      <p>
         
Dolorum qui ipsa sed nobis error adipisci ut. Omnis omnis quo. Quisquam eos dolores aut autem nam voluptatem impedit suscipit. Et ut delectus minima illo. Praesentium occaecati ut. Ut et facere laboriosam molestiae error voluptatem rerum.
      </p>
      <p>
         
Ipsum non natus magnam qui cupiditate voluptas assumenda. Dolorum ipsa et perferendis mollitia dignissimos possimus nisi sed cum. Harum rerum quo repudiandae adipisci facere suscipit dolore sint eum. Minima enim expedita aliquid. Et facere incidunt fugit laborum. Voluptas qui accusamus quo qui et beatae fuga doloribus.
      </p>
      <p>
         
Aut facilis possimus vel perspiciatis occaecati quia autem. Eaque quia non est accusantium itaque dignissimos modi asperiores tempora. At dolorem eum sequi aliquid. Ut similique consequuntur voluptatem maiores dolorem quo aut eveniet quibusdam. Inventore fugit nemo illo error sit possimus.
      </p>
    </div>
  </div>
</div>
`;

exports[`<SidePanel /> component its snapshot matches story WithButtons 1`] = `
.c7 {
  font-size: 105%;
  font-weight: 700;
  line-height: 0;
  white-space: nowrap;
}

.c7 svg {
  max-height: 100%;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
}

.c0 {
  background-color: white;
  bottom: 0;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 2rem;
  position: fixed;
  top: 0;
  -webkit-transition: -webkit-transform 0.25s ease-out;
  -webkit-transition: transform 0.25s ease-out;
  transition: transform 0.25s ease-out;
  width: 100vw;
  z-index: 16;
  left: calc(-100vw - 1rem);
  -webkit-transform: translateX(calc(100vw + 1rem));
  -ms-transform: translateX(calc(100vw + 1rem));
  transform: translateX(calc(100vw + 1rem));
  max-width: 80vw;
}

.c0 ~ .SidePanelstyles__SidePanelMain-sc-18iyri2-0 {
  -webkit-transition: -webkit-transform 0.25s ease-out,margin 0.25s ease-out;
  -webkit-transition: transform 0.25s ease-out,margin 0.25s ease-out;
  transition: transform 0.25s ease-out,margin 0.25s ease-out;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  padding: 0 2rem 0 2rem;
}

.c2 {
  font: 700 1.75rem/2.25001rem 'IBM Plex Sans',Arial,sans-serif;
}

.c3 {
  margin-left: auto;
  border: none;
  cursor: pointer;
}

.c3 > *:hover {
  color: #0050e6;
}

.c4 {
  height: 100%;
  margin-bottom: 2rem;
  overflow-y: auto;
  padding: 0 2rem 0 2rem;
}

.c4::-webkit-scrollbar {
  width: 0;
}

.c6 {
  height: 4rem;
  margin-top: auto;
  width: 100%;
}

.c6 > * {
  height: 4rem;
  width: 50%;
}

.c8 {
  background: transparent;
  position: fixed;
  left: 0;
  top: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  z-index: 10;
  overscroll-behavior: none;
  -webkit-transition: background 0.25s ease-out;
  transition: background 0.25s ease-out;
}

@media (min-width:672px) {
  .c5 {
    -webkit-flex-wrap: no-wrap;
    -ms-flex-wrap: no-wrap;
    flex-wrap: no-wrap;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

@media (min-width:672px) {
  .c0 {
    width: 28rem;
    left: calc(-28rem - 1rem);
    -webkit-transform: translateX(calc(28rem + 1rem));
    -ms-transform: translateX(calc(28rem + 1rem));
    transform: translateX(calc(28rem + 1rem));
  }
}

<div>
  <div>
    <div
      class="c0"
      mode="onTop"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          Lorem ipsum dolor
        </div>
        <button
          aria-label="Close"
          class="c3"
        >
          <svg
            aria-label="icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            role="img"
            size="24"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
      <div
        class="c4"
      >
        <p>
          Rerum consequatur voluptas itaque nesciunt sed quam sapiente. Vitae quia non nobis. Corrupti mollitia quia ex aspernatur ducimus perspiciatis tenetur. Id reprehenderit provident enim pariatur. Optio iste non perferendis qui pariatur. Et tempora omnis magnam ut aliquid doloribus repellendus eum.
        </p>
        <p>
           
Eaque est voluptatem iusto voluptates velit reprehenderit delectus. Veritatis et atque sunt eius consequatur exercitationem sed eum. Consequatur iusto vitae reprehenderit adipisci et eos ex reiciendis.
        </p>
        <p>
           
Quod cum et vitae sapiente. Voluptatem esse aut sint quia enim et earum. Quas veniam ut culpa est doloremque. Maiores incidunt perferendis adipisci.
        </p>
        <p>
           
Error quos dolorum facere facilis voluptatum ea officia reprehenderit qui. Reiciendis rerum libero dolore labore porro perferendis veniam eius earum. Ducimus reprehenderit maxime vel ut repellendus. Sunt iure tenetur sed non vero mollitia et ea. Est est accusamus et tempore veniam ut.
        </p>
        <p>
           
In qui exercitationem quae est tempore dolor expedita. Aut quibusdam voluptas illum laborum. Aspernatur necessitatibus mollitia quae deleniti sed ut et. Deserunt consequatur repudiandae.
        </p>
        <p>
           
Voluptas quia nemo vel facere. Possimus animi porro ea aut asperiores sint. Iste debitis maxime. Ut eos consequatur qui molestiae suscipit. Voluptatibus distinctio id iste dolorum aliquid necessitatibus adipisci.
        </p>
        <p>
           
Eos vitae rerum vitae. Nulla et eum est veritatis consectetur eveniet. Modi quibusdam ut vero adipisci consequuntur delectus explicabo fugit tempore.
        </p>
        <p>
           
Recusandae iure libero nesciunt vero quos et. Tempore quia cumque accusamus. Occaecati accusamus voluptatem eligendi quisquam saepe. Facere sit occaecati dolore et sit qui amet voluptatem placeat. Accusamus nihil iusto nesciunt aliquid sed reprehenderit.
        </p>
        <p>
           
Eaque commodi maiores quia. Enim eum est ab eveniet molestiae. Perferendis qui doloremque explicabo laboriosam. Qui molestiae praesentium et perferendis qui neque illum.
        </p>
        <p>
           
Id repellat facere modi aliquid cum aliquid praesentium. Quo in quam qui occaecati culpa earum commodi ducimus. Laboriosam fugit adipisci. Voluptas qui sed asperiores quo commodi et magnam debitis aliquid. Nisi dignissimos quidem.
        </p>
      </div>
      <div
        class="c5 c6"
      >
        <button
          class="c7 cds--btn cds--btn--secondary"
          tabindex="0"
          type="button"
        >
          Cancel
           
        </button>
        <button
          class="c7 cds--btn cds--btn--primary"
          tabindex="0"
          type="button"
        >
          Ok
           
        </button>
      </div>
    </div>
    <div
      class="c8"
    />
    <div
      class="SidePanelstyles__SidePanelMain-sc-18iyri2-0"
    >
      <p>
        Vero voluptas ut. Ut et non deleniti labore ducimus. Dolores illum ut rerum qui. Ea et occaecati nesciunt fuga quas.
      </p>
      <p>
         
Molestias rerum mollitia perferendis sit minima occaecati ipsa. Consequatur ea autem dolorem. Voluptas officia atque quidem accusantium et nemo.
      </p>
      <p>
         
Libero ipsam suscipit quia impedit nostrum maiores tenetur. Dicta consequatur laudantium minima inventore omnis ut ipsam ratione dolorem. Sint voluptatem nihil eligendi quod ut velit consequatur. Exercitationem nulla vitae.
      </p>
      <p>
         
Dolorum quis expedita rerum error et. Aperiam modi voluptatem. Corrupti odio sunt nihil. Aut est et. Nihil sit voluptatum aut in.
      </p>
      <p>
         
Non minima nihil. Voluptatum sed aut laborum reprehenderit rerum. Consequatur vero similique et qui in corrupti ducimus.
      </p>
      <p>
         
Facilis aliquid quibusdam et pariatur dignissimos eum repellat qui. Repellendus adipisci qui quae in ipsum. Quia beatae sunt nihil nam rerum ipsa quisquam itaque ducimus. Ad voluptatem alias provident.
      </p>
      <p>
         
Voluptatem nemo enim libero voluptate exercitationem ipsam ut. Aut nobis quasi quos voluptatem unde optio et. Placeat qui dolore. Magnam maxime dolores quae qui. Voluptatem quasi suscipit dolor.
      </p>
      <p>
         
Reprehenderit quos ut sint repellat et. Nihil excepturi vitae. Quis iure doloribus qui natus quae.
      </p>
      <p>
         
Aperiam temporibus vitae odio aut tempore perferendis ullam et iusto. Pariatur repellat in id molestias. Eos doloribus qui accusamus quae. Velit amet debitis soluta. Beatae quo qui doloribus et modi modi. Hic soluta et velit sunt nostrum enim fugiat odio adipisci.
      </p>
      <p>
         
Sint esse illo et ab fuga soluta qui illo. Occaecati ea ut harum amet officia sunt voluptas exercitationem. Blanditiis iusto eos rerum.
      </p>
      <p>
         
Odit id quasi nihil omnis quis possimus nihil. Voluptas a molestiae dolorem repellat dolores et rem quod. Rerum assumenda dolorem iste quas nesciunt optio reprehenderit beatae.
      </p>
      <p>
         
Quis dolor eaque ipsam qui tempore quisquam qui quo. Dolorem enim suscipit possimus voluptate et quam aut. Explicabo eum quia. Aut impedit sit similique aut ea vel. Non mollitia totam aut nobis et accusamus tempore aut eveniet.
      </p>
      <p>
         
Et eius itaque eligendi voluptatem sint quia sit rerum et. Sunt consequatur sint reprehenderit laborum atque neque qui. Voluptatem eum quod.
      </p>
      <p>
         
Itaque natus sunt nemo quo quia. Nobis officiis rem assumenda provident at. Rem aliquam quo temporibus.
      </p>
      <p>
         
Quae eum incidunt et alias. Commodi exercitationem quos. Sit quia consequatur labore nobis molestias aut. Architecto quasi dolores sunt porro officiis reiciendis.
      </p>
      <p>
         
Atque sed totam quasi mollitia. Incidunt aspernatur maxime alias. Veniam ad neque pariatur sit.
      </p>
      <p>
         
Explicabo dolorem ducimus corporis distinctio. Quis qui doloribus accusantium quos sapiente laboriosam eos. Porro repellendus vel deleniti accusamus dicta asperiores nobis adipisci ducimus. Magnam quas quia delectus doloribus expedita inventore deserunt quia.
      </p>
      <p>
         
Porro maxime quis a nulla odio reiciendis voluptatibus. Ut tenetur voluptas. Consequuntur corrupti ab molestiae consequuntur.
      </p>
      <p>
         
Et facere aspernatur. Voluptas voluptatem placeat distinctio vero incidunt eum iste. Nesciunt laudantium est ipsam sunt suscipit. Porro quibusdam facere et et reprehenderit nulla recusandae facere natus. Facilis impedit labore aut non. Cum ut esse eaque veritatis laborum id numquam voluptates dolore.
      </p>
      <p>
         
Eum placeat dolorem voluptas harum occaecati eos amet numquam. Animi ut esse. Et non deleniti illo quam quam laudantium vel. Ipsum sed sequi et quia atque mollitia.
      </p>
      <p>
         
Sunt labore dolore. Sed eius sunt voluptas ut mollitia suscipit velit enim mollitia. Dolores fugiat atque et. Quia molestiae voluptatem et et molestiae modi laborum unde qui. Perspiciatis explicabo aut suscipit possimus accusamus reiciendis aliquid.
      </p>
      <p>
         
Consequatur omnis at voluptatibus repellat minima quis. Ducimus nostrum perspiciatis. Voluptatem voluptates deleniti voluptatem ad quia. Culpa ut iste vitae omnis aut perferendis eos maxime. Voluptate recusandae vel architecto laborum qui consequatur molestiae dolore.
      </p>
      <p>
         
Voluptatem dolores corporis eligendi minus ipsam dolor. Quidem earum quod modi. Dolor modi laudantium cumque. Autem iure tenetur nulla nemo. Unde neque ratione quos iusto distinctio voluptatem sit ut id. Quam aut facilis nihil harum quia architecto veniam voluptas.
      </p>
      <p>
         
Qui at dolorum impedit. Voluptas sint repudiandae. Corporis inventore aut fugit aspernatur consequatur fugit rerum. Dolore autem voluptatem rerum consequatur necessitatibus. Eligendi sed voluptas saepe porro dolor id ad natus. A qui ullam.
      </p>
      <p>
         
Id tempora beatae in eligendi inventore cum voluptatem. Quae eum quasi repudiandae. Reprehenderit ut nemo incidunt in ipsam. Earum est est temporibus assumenda assumenda eum a expedita illum. Ut odio incidunt nobis et enim numquam dolores. Totam recusandae rerum hic.
      </p>
      <p>
         
Aut veritatis et. Dignissimos error consequatur non est praesentium sit architecto cumque. Expedita eos incidunt aut eos a aliquam quo consequuntur sunt. Officia dolorum magni eaque et est tempore. Earum ut ratione voluptatem qui facere perspiciatis cupiditate odit. Cum ipsa similique nostrum ut.
      </p>
      <p>
         
Rerum quibusdam quis ex asperiores aut. Sint in beatae sit at placeat tempore omnis illo velit. Nostrum fugiat dolorem fugiat est repudiandae dolores et dolor eius. Itaque voluptas quae quasi aut quam blanditiis odit eum est.
      </p>
      <p>
         
Facere consequatur aut dicta vitae quia repudiandae quis. In mollitia facere impedit facilis ut quo rem voluptas. Voluptas et quia dolor. Natus est dolores aliquid eum laborum id.
      </p>
      <p>
         
Et aut unde. Voluptatibus excepturi debitis vel voluptas vitae eaque eum delectus. Nihil nisi molestiae.
      </p>
      <p>
         
Repudiandae harum ducimus laboriosam necessitatibus est sunt cupiditate nulla. Laborum et sed doloremque nemo sit quos. Ad sed blanditiis unde assumenda. Fuga non soluta ut.
      </p>
      <p>
         
Illo ut velit molestias est quia. Sed est fuga eveniet dolorum id. Recusandae laudantium voluptatem maiores possimus sit cumque eaque. Consequatur ipsa voluptatum. Sed non velit. Consequatur ea inventore alias exercitationem quia nulla hic voluptas.
      </p>
      <p>
         
At ullam quis atque occaecati non corrupti beatae. Aliquam consequatur illo repellat. Error nesciunt laudantium suscipit.
      </p>
      <p>
         
Voluptatem nostrum similique in qui nam odit sunt. Doloremque non vel maxime odit. Tempora nihil libero harum id doloremque labore magni minima eum. Nam ea rerum ratione. Nulla dolores amet itaque.
      </p>
      <p>
         
Ut praesentium consequatur explicabo vel. Repudiandae libero iste molestias quibusdam et optio ab illo numquam. Vero et dolorum quidem adipisci nesciunt consectetur asperiores.
      </p>
      <p>
         
Et quam perspiciatis temporibus non non accusamus quod eos. Nulla possimus cumque voluptatem reprehenderit aut enim maiores. Quod quae dolorem et magni nulla voluptatem enim doloribus reiciendis. Rerum optio velit.
      </p>
      <p>
         
Autem eveniet et aut corrupti. Facere est quasi ratione. Sunt perferendis in debitis mollitia.
      </p>
      <p>
         
Magni qui odio ut quia. Culpa et eveniet nostrum ut. Totam repellendus eum eos assumenda. Perferendis iure ipsum. Modi beatae sunt officia.
      </p>
      <p>
         
Laboriosam ullam molestiae qui. Explicabo excepturi asperiores dolores nemo corrupti perspiciatis excepturi autem enim. Mollitia laboriosam nemo quia. Vel officiis minus voluptate quo.
      </p>
      <p>
         
Et voluptatum et est. Id voluptas quidem veniam adipisci autem accusamus. Quis necessitatibus quis itaque natus et vero. Est aut cumque praesentium numquam voluptates. Sit eos unde id nostrum.
      </p>
      <p>
         
Minus iusto consequuntur repellat. Ut et et sunt modi repellat minus est. Dolorum illo officiis rerum voluptas. Libero hic totam quo quia non ut. Harum maxime rem officiis consequuntur assumenda architecto cum. Tempora quo ipsa molestiae ut iure enim itaque.
      </p>
    </div>
  </div>
</div>
`;

exports[`<SidePanel /> component its snapshot matches story WithDisabledButtons 1`] = `
.c7 {
  font-size: 105%;
  font-weight: 700;
  line-height: 0;
  white-space: nowrap;
}

.c7 svg {
  max-height: 100%;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
}

.c0 {
  background-color: white;
  bottom: 0;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 2rem;
  position: fixed;
  top: 0;
  -webkit-transition: -webkit-transform 0.25s ease-out;
  -webkit-transition: transform 0.25s ease-out;
  transition: transform 0.25s ease-out;
  width: 100vw;
  z-index: 16;
  left: calc(-100vw - 1rem);
  -webkit-transform: translateX(calc(100vw + 1rem));
  -ms-transform: translateX(calc(100vw + 1rem));
  transform: translateX(calc(100vw + 1rem));
  max-width: 80vw;
}

.c0 ~ .SidePanelstyles__SidePanelMain-sc-18iyri2-0 {
  -webkit-transition: -webkit-transform 0.25s ease-out,margin 0.25s ease-out;
  -webkit-transition: transform 0.25s ease-out,margin 0.25s ease-out;
  transition: transform 0.25s ease-out,margin 0.25s ease-out;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  padding: 0 2rem 0 2rem;
}

.c2 {
  font: 700 1.75rem/2.25001rem 'IBM Plex Sans',Arial,sans-serif;
}

.c3 {
  margin-left: auto;
  border: none;
  cursor: pointer;
}

.c3 > *:hover {
  color: #0050e6;
}

.c4 {
  height: 100%;
  margin-bottom: 2rem;
  overflow-y: auto;
  padding: 0 2rem 0 2rem;
}

.c4::-webkit-scrollbar {
  width: 0;
}

.c6 {
  height: 4rem;
  margin-top: auto;
  width: 100%;
}

.c6 > * {
  height: 4rem;
  width: 50%;
}

.c8 {
  background: transparent;
  position: fixed;
  left: 0;
  top: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  z-index: 10;
  overscroll-behavior: none;
  -webkit-transition: background 0.25s ease-out;
  transition: background 0.25s ease-out;
}

@media (min-width:672px) {
  .c5 {
    -webkit-flex-wrap: no-wrap;
    -ms-flex-wrap: no-wrap;
    flex-wrap: no-wrap;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

@media (min-width:672px) {
  .c0 {
    width: 28rem;
    left: calc(-28rem - 1rem);
    -webkit-transform: translateX(calc(28rem + 1rem));
    -ms-transform: translateX(calc(28rem + 1rem));
    transform: translateX(calc(28rem + 1rem));
  }
}

<div>
  <div>
    <div
      class="c0"
      mode="onTop"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          Lorem ipsum dolor
        </div>
        <button
          aria-label="Close"
          class="c3"
        >
          <svg
            aria-label="icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            role="img"
            size="24"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
      <div
        class="c4"
      >
        <p>
          Et nihil corporis voluptate et suscipit incidunt quasi eum. Eos dolore voluptas. Aspernatur qui autem nesciunt voluptas. Non qui quidem praesentium eos sed ab quisquam.
        </p>
        <p>
           
Voluptatem consequatur vel possimus illo quod nobis illo earum illo. Cum et eum neque et. Qui perspiciatis qui veniam. Iste modi ea id ut.
        </p>
        <p>
           
Iusto iure nulla est. Nesciunt non unde eum. Magni cupiditate mollitia ut quo dignissimos voluptas magnam. Enim aperiam aut eligendi fugiat sed quisquam iste dolores est.
        </p>
        <p>
           
Assumenda nihil aspernatur voluptas voluptatum rerum. Perspiciatis consequuntur ipsam quos reprehenderit neque et eos labore ipsum. Veritatis inventore sed ut sed sed aut aut aut ut. Natus a voluptatibus aut hic voluptates quibusdam maiores et tenetur.
        </p>
        <p>
           
Dolores deserunt totam odit molestiae nobis. Numquam aut ratione. Nostrum id esse. Laboriosam quos officia aliquam et ut. Consequuntur ea neque sunt illum.
        </p>
        <p>
           
Qui sint dignissimos. Illum recusandae adipisci veritatis eveniet. Nisi deserunt repudiandae itaque qui. Et consequatur ipsa.
        </p>
        <p>
           
Rerum ut asperiores ab voluptatem et ea voluptatem sed cum. Voluptates enim et nihil numquam vitae odit adipisci. Perferendis tempore placeat quia hic maiores assumenda nesciunt. Consectetur veniam dignissimos tempore. Enim nulla voluptate itaque aliquam sit sed.
        </p>
        <p>
           
Suscipit labore aut non voluptas nam saepe consequatur suscipit. Suscipit similique laborum dolorem tempore. Cupiditate eveniet maiores dolorem. Qui aut vel est pariatur ratione veniam sunt fugit ut. Beatae aut aut. Quae tempore dolor reprehenderit quam dolor.
        </p>
        <p>
           
Nihil saepe eos rerum quia saepe nam et aut. Veritatis officia officiis voluptatem non. Ipsum eveniet sunt atque cumque dolorem laborum sit. Et rerum rerum quam ipsam exercitationem impedit reprehenderit illum quaerat. Molestiae esse ex. Corrupti maxime et voluptate.
        </p>
        <p>
           
Nulla voluptatem sunt. Voluptates architecto ea provident. Suscipit sit eius ut itaque iure quia officia consequuntur. Cupiditate officia saepe eius. Eos ratione voluptates ullam ratione labore occaecati molestiae minus. Ipsam ipsum velit blanditiis aut.
        </p>
      </div>
      <div
        class="c5 c6"
      >
        <button
          class="c7 cds--btn cds--btn--secondary"
          tabindex="0"
          type="button"
        >
          Cancel
           
        </button>
        <button
          class="c7 cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          tabindex="0"
          type="button"
        >
          Ok
           
        </button>
      </div>
    </div>
    <div
      class="c8"
    />
    <div
      class="SidePanelstyles__SidePanelMain-sc-18iyri2-0"
    >
      <p>
        Nesciunt sint accusantium placeat explicabo. Et quibusdam neque eius. Assumenda cum quia accusamus quisquam. Saepe eum dolor tempora cum quod non quo qui aut. Aspernatur optio debitis laboriosam quia consequatur placeat assumenda.
      </p>
      <p>
         
Incidunt asperiores quod itaque est recusandae minima recusandae et. Quasi nam tempora magni exercitationem nostrum sunt molestiae dolore. Temporibus quod ut veritatis molestias at dolores ipsum deserunt quod. Voluptatem eius dolorem architecto neque cumque consequuntur. Repellat atque sint saepe velit reiciendis quia minus. Sapiente accusamus ratione nesciunt nesciunt quas.
      </p>
      <p>
         
Autem pariatur natus aliquam rerum enim id. Accusamus aut impedit explicabo vero optio. Similique hic et consequuntur molestiae consequatur. Ut non dolorum rerum omnis qui. Corporis odio incidunt non ut neque ullam quisquam. Aliquam eos est dolor consectetur mollitia quae necessitatibus repellendus nemo.
      </p>
      <p>
         
Neque reiciendis aut. Voluptas totam sunt cupiditate animi non. Nihil similique et accusamus voluptatem quam est et totam consectetur. Quo consequatur non quia molestiae assumenda est nisi perspiciatis. Perferendis rerum voluptates nesciunt consequatur. Esse et sunt quasi aliquid vel cupiditate quos et.
      </p>
      <p>
         
Voluptatibus exercitationem pariatur quia sed quia rerum est voluptatum. Ab optio sunt nostrum veniam in aliquid. Nisi sit deleniti ut laborum delectus esse sit illo dolores.
      </p>
      <p>
         
Deleniti perferendis nihil aliquid quod accusantium quam. Labore laudantium veritatis voluptatem iste omnis tempora. Praesentium sit voluptatem recusandae nesciunt aut eum. Porro reiciendis vel officia. Officiis maiores nostrum est quae. Perferendis perferendis et amet consequatur non dignissimos maiores maxime exercitationem.
      </p>
      <p>
         
Minus non mollitia culpa tenetur vel labore temporibus et. Voluptatibus corporis alias earum et dicta. Magni et iure doloribus nemo distinctio quidem et. Molestiae tempore ut. Fugiat minima voluptate consequatur optio voluptates a.
      </p>
      <p>
         
Pariatur corrupti non possimus. Mollitia est repellendus qui voluptatem et. Corrupti rem ab nam. Mollitia rem laborum ad explicabo ipsum quos ut. Perferendis impedit qui natus.
      </p>
      <p>
         
Vitae mollitia molestias nemo esse vitae quis. Expedita ullam odit similique consequatur modi. Modi maiores quia ipsam quia est ea. Dolorem provident at eligendi odit in sit sed laborum nulla. Consequatur sint id nihil. Eius fugit odit blanditiis architecto a.
      </p>
      <p>
         
Qui accusantium placeat corporis qui rem eaque vero. Numquam suscipit aperiam sit expedita cupiditate et quam iusto exercitationem. Porro harum autem autem dolorem voluptatem assumenda non.
      </p>
      <p>
         
Adipisci tenetur minus fugit ad occaecati. Maiores aspernatur quas nihil rerum reprehenderit consequatur eaque. Rerum laudantium cum sit omnis praesentium nam quas nisi adipisci. Officia magni eum neque eos quia at. Quo animi sed omnis vitae provident expedita cum.
      </p>
      <p>
         
Sed recusandae dolorem. Aut itaque sint quia expedita ratione eligendi ut voluptatem. Ea id iste quaerat quasi voluptatum dolorem ut qui. Corporis similique sit vitae ab harum quasi.
      </p>
      <p>
         
Accusantium perferendis at eligendi dolore. Laudantium dicta itaque cum fuga nemo quis et at praesentium. Voluptates corrupti sed error.
      </p>
      <p>
         
Dolores sit et autem magnam sint consectetur. Impedit qui libero est laborum recusandae. Modi magnam sequi adipisci sed dignissimos.
      </p>
      <p>
         
Magnam officiis nam et nobis optio vitae magni quod aut. Fugit modi nesciunt quaerat non. Vero id labore est molestiae eius nulla ea porro consequatur. Laboriosam et vel ratione velit occaecati minus qui sed. Qui quibusdam tempore dicta.
      </p>
      <p>
         
Doloremque est magni aut accusantium quis sit laudantium nulla et. Veniam facilis blanditiis autem omnis illo dolores et. Nesciunt suscipit recusandae eos debitis occaecati ullam pariatur sit quaerat. Totam non qui. Nihil nisi est expedita quia vero sit quidem voluptas. Assumenda omnis et.
      </p>
      <p>
         
Et iusto velit eos odio. Corporis velit incidunt officiis nesciunt similique. Asperiores sed aut ut consequuntur ea.
      </p>
      <p>
         
Eos illum repellendus optio ad. Ab impedit voluptatem. Rem dolores eum quos sit est laborum velit sed consequatur. Ipsam nobis asperiores reiciendis neque dicta quia. Praesentium nobis ad assumenda. Enim iusto numquam nobis assumenda illum nisi enim mollitia.
      </p>
      <p>
         
In consequatur aliquam commodi necessitatibus reiciendis. Dolorem dolores velit dolor similique ut est. Eius rerum debitis quae quidem sed aut debitis. Qui omnis totam porro modi quas corrupti molestiae odio magnam. Quo quidem asperiores quibusdam sint dolor ipsam quam.
      </p>
      <p>
         
Est voluptas officia doloribus beatae. Voluptas possimus et vitae nisi molestiae. Voluptas omnis nesciunt consectetur voluptatem aut magnam. Autem natus ullam temporibus officiis est culpa natus. Aut repellat sunt rerum molestias laboriosam totam enim ducimus. Similique quo omnis quas vitae numquam eius corrupti doloribus omnis.
      </p>
      <p>
         
Quo tempore dolores accusantium incidunt laudantium molestiae eum quia excepturi. Nisi qui eos porro in est quas expedita corrupti voluptatem. Occaecati blanditiis est similique consequatur quis aut ipsum. Qui occaecati voluptatem voluptatem consequuntur explicabo sit ut. Maiores quis illo optio corrupti aliquid.
      </p>
      <p>
         
Repellendus dolorem corrupti eos dignissimos et tempore. Veniam eveniet id quos neque quasi impedit enim sed. Consequuntur nihil inventore voluptas voluptas exercitationem officiis unde delectus qui. Autem odit nihil quia ut aut consectetur fuga. Incidunt eaque at rerum.
      </p>
      <p>
         
Nesciunt aut aliquid architecto aut esse facere voluptas magnam dolorem. Voluptatem minus veniam. Sed voluptates dolores similique ut error. Delectus provident ullam aut odio. Voluptatibus quia tempora repudiandae ut. Velit ut laudantium aliquid dolor quia molestiae et iusto dolorum.
      </p>
      <p>
         
Similique est esse sed laborum eius. Labore quia ad amet perferendis reiciendis aliquam expedita laborum. Facere autem fugit dicta. Nihil corrupti sit veritatis asperiores earum maiores enim occaecati enim. Praesentium aliquam quia. Dolor expedita consequuntur ipsum molestias non quasi et.
      </p>
      <p>
         
Nisi qui asperiores. Veritatis blanditiis ab explicabo magnam et aliquid explicabo. Est eum quia est non dolorem qui qui illum. Dolores laudantium quod ad magnam et eius commodi quod. Quam vero asperiores.
      </p>
      <p>
         
Dolores totam totam aliquam sed qui consequuntur doloremque quibusdam. At quae consequatur sunt repellendus iure sed et iusto. Voluptatum laboriosam quo ut alias accusamus veritatis soluta. Praesentium repellat voluptate et id in iure cumque qui. Impedit repellendus et repudiandae perferendis voluptatem corporis non. Eos tenetur ut.
      </p>
      <p>
         
Vel amet in quod eos quibusdam non dolores molestias. Hic qui odit ut reiciendis ab. Nisi repudiandae dolor aut aspernatur aut enim. At minus neque at iure enim omnis quia dolor. Cumque excepturi dolor. Quidem dolorem eos minima.
      </p>
      <p>
         
Alias ut ut velit voluptas debitis. Quas voluptas similique non. Natus quidem aut sint dolore sunt quisquam.
      </p>
      <p>
         
Sunt corrupti rerum id voluptates sunt esse ad nihil. Suscipit labore ut. Dolore doloremque porro dolores sunt cupiditate id quis dolorem dolor. Officia eum adipisci autem rem.
      </p>
      <p>
         
Distinctio sit praesentium. Quam ipsum saepe ut sint ea id optio. Laudantium quidem voluptate dolorem libero et fuga. Debitis blanditiis dicta sapiente molestias consequuntur est dicta est.
      </p>
      <p>
         
Ullam consequatur porro doloremque quas quo enim ipsa. Rem cumque quisquam. Ad illo accusantium qui explicabo ad eos non nam vel.
      </p>
      <p>
         
Reiciendis qui quia doloribus magni est ipsum. Aperiam ut dolorem maxime architecto dolore saepe dignissimos ab odit. Quaerat adipisci odit voluptatem qui cumque delectus alias nobis. Est inventore eos quia illo. Repellat est perspiciatis aut.
      </p>
      <p>
         
Ut in ab autem. Aliquam voluptas quo exercitationem. Adipisci sint repellendus magni rerum. Consequatur est eum ut cum laborum nostrum modi id.
      </p>
      <p>
         
Quia quas aut dolor laborum perspiciatis earum. Quis ut recusandae eos quidem. Aut officiis aut velit deserunt tenetur explicabo sunt placeat. Tempore illum amet culpa quidem. Similique et dolore suscipit impedit qui magnam ut. Ut qui esse dolores quas distinctio officiis aut temporibus.
      </p>
      <p>
         
Expedita beatae mollitia. Quasi culpa harum. Quae sed quas deserunt odit. Est dolor quisquam eligendi repellendus.
      </p>
      <p>
         
Sed doloribus in ea aut aut sit. Ipsa qui qui perspiciatis quia nulla reprehenderit voluptatem id. Dolores aspernatur aut soluta aut. Molestiae at praesentium est. Voluptates et veritatis molestiae doloribus doloribus in architecto perspiciatis numquam.
      </p>
      <p>
         
Atque consequatur non suscipit esse facilis amet. Ut fugiat et et mollitia eaque inventore quasi saepe et. Sunt dolor in. Rerum omnis neque. Tempora ducimus reiciendis iste quo quo reiciendis ut vero.
      </p>
      <p>
         
Magni earum et qui cum numquam. Et dignissimos nihil aut nobis. Ut minus facilis.
      </p>
      <p>
         
Eligendi officiis rerum nemo quis debitis nihil. Magnam nam fuga adipisci quidem quia voluptate minima. Eveniet corrupti qui sint quibusdam qui voluptatem itaque placeat possimus. Modi doloribus est sequi labore. Nostrum placeat modi consequatur dolores voluptates iusto.
      </p>
      <p>
         
Natus deserunt commodi ea tempora fuga voluptatibus nisi illo quo. Sunt vel eius sed explicabo. Et quia enim voluptatum asperiores. Voluptatem ratione quia est saepe aut quidem sed.
      </p>
    </div>
  </div>
</div>
`;

exports[`<SidePanel /> component its snapshot matches story WithTitle 1`] = `
.c0 {
  background-color: white;
  bottom: 0;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 2rem;
  position: fixed;
  top: 0;
  -webkit-transition: -webkit-transform 0.25s ease-out;
  -webkit-transition: transform 0.25s ease-out;
  transition: transform 0.25s ease-out;
  width: 100vw;
  z-index: 16;
  left: calc(-100vw - 1rem);
  -webkit-transform: translateX(calc(100vw + 1rem));
  -ms-transform: translateX(calc(100vw + 1rem));
  transform: translateX(calc(100vw + 1rem));
  max-width: 80vw;
}

.c0 ~ .SidePanelstyles__SidePanelMain-sc-18iyri2-0 {
  -webkit-transition: -webkit-transform 0.25s ease-out,margin 0.25s ease-out;
  -webkit-transition: transform 0.25s ease-out,margin 0.25s ease-out;
  transition: transform 0.25s ease-out,margin 0.25s ease-out;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  padding: 0 2rem 0 2rem;
}

.c2 {
  font: 700 1.75rem/2.25001rem 'IBM Plex Sans',Arial,sans-serif;
}

.c3 {
  margin-left: auto;
  border: none;
  cursor: pointer;
}

.c3 > *:hover {
  color: #0050e6;
}

.c4 {
  height: 100%;
  margin-bottom: 2rem;
  overflow-y: auto;
  padding: 0 2rem 0 2rem;
}

.c4::-webkit-scrollbar {
  width: 0;
}

@media (min-width:672px) {
  .c0 {
    width: 28rem;
    left: calc(-28rem - 1rem);
    -webkit-transform: translateX(calc(28rem + 1rem));
    -ms-transform: translateX(calc(28rem + 1rem));
    transform: translateX(calc(28rem + 1rem));
  }
}

<div>
  <div>
    <div
      class="c0"
      mode="onTop"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          Lorem ipsum dolor
        </div>
        <button
          aria-label="Close"
          class="c3"
        >
          <svg
            aria-label="icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            role="img"
            size="24"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
      <div
        class="c4"
      >
        <p>
          Neque distinctio temporibus cumque sit quod facere dolorum. Placeat et architecto quia nesciunt architecto ut. Quas maxime est in qui animi sunt. Maiores quae consectetur modi id laborum et dolores.
        </p>
        <p>
           
Rem quae quibusdam numquam molestiae. Voluptas illum aliquam. Excepturi unde ipsam consequatur ea pariatur odio. Aut temporibus voluptatibus. Eveniet qui deleniti magni.
        </p>
        <p>
           
Consequuntur doloremque ab iste ea dolores et. Est ut maxime fugit expedita doloremque itaque sunt vel. Maxime saepe enim veritatis soluta reprehenderit impedit neque.
        </p>
        <p>
           
Autem labore aut velit dignissimos consequatur eum. Assumenda quod necessitatibus nihil sit et quam autem. Pariatur dolor ut quae magnam facilis repellendus consequatur ex excepturi. Quisquam ut molestias earum deserunt molestiae et facere et non.
        </p>
        <p>
           
Ab culpa ad quam nulla id soluta. Voluptatem qui ab vel dolorem maxime sit voluptatem iusto. Voluptatem consectetur provident aspernatur magni ut dolorem mollitia repudiandae. Laboriosam quidem quis sit. Qui rerum et quo aut nisi sapiente facilis est.
        </p>
        <p>
           
Incidunt labore maiores omnis molestiae voluptatem et omnis. Enim iste fugiat qui omnis voluptatibus corrupti tempora rem. Architecto ut ut sunt impedit.
        </p>
        <p>
           
Repellendus temporibus voluptates. Occaecati beatae dolore praesentium impedit culpa magnam vel dolores voluptatem. Ea est quo minus occaecati ducimus neque. Accusamus odio itaque consequatur quod enim aut dicta molestiae. Quia eos voluptate eaque mollitia incidunt minus modi.
        </p>
        <p>
           
Est vel sed dolorem voluptate voluptatum consequatur animi. Minus neque non ea qui et blanditiis nam. Voluptas delectus porro numquam similique qui non nisi vero perferendis. Deleniti veritatis laboriosam enim nam et cum deserunt provident. Veritatis quasi quo explicabo.
        </p>
        <p>
           
Temporibus modi omnis et et magni porro animi iure. Eum veniam quia expedita corrupti omnis officiis. Odit deleniti aut velit in nostrum voluptas repellendus illo aut. Animi sint rerum reiciendis. Omnis nihil velit eius veritatis aliquam vero et. Quidem quae laudantium maxime ipsa eaque debitis.
        </p>
        <p>
           
Eveniet culpa velit id. Sit et rem necessitatibus alias. Quae reprehenderit magnam. Distinctio suscipit rerum libero nihil unde accusantium dolor nostrum nesciunt. Hic aut deserunt possimus est placeat distinctio officia voluptas non.
        </p>
      </div>
    </div>
    <div
      class="SidePanelstyles__SidePanelMain-sc-18iyri2-0"
    >
      <p>
        Praesentium delectus molestiae dolorem sit autem consequatur hic. Et eaque quia qui aut ut eligendi sunt cupiditate porro. Aut hic sit repudiandae corrupti vel.
      </p>
      <p>
         
Assumenda et sed quia facere dolorum et explicabo eos sequi. Vel et illum. Labore provident maxime non aut eum a quia dignissimos.
      </p>
      <p>
         
Quidem iste et error ipsam labore et eum dolorum. Iure quod asperiores rerum. Aut magni dolorum animi minima excepturi tenetur harum et consectetur. Beatae omnis repudiandae aliquam voluptas consequatur.
      </p>
      <p>
         
Explicabo architecto mollitia dolor in. Labore facilis quidem enim. Nobis maxime consequuntur aut. Repellendus consectetur ab quas quis officiis vitae. Voluptatibus est ut ratione rem expedita. Voluptatem blanditiis assumenda.
      </p>
      <p>
         
Et ea rem rem qui dolorem dignissimos quidem. Repudiandae eveniet natus rem ipsam. Voluptate sint eius. Odio repudiandae dolores. Earum adipisci et enim eos.
      </p>
      <p>
         
Commodi perspiciatis magni deserunt. Deserunt quae quas tempore assumenda. Quia ad et velit qui. Error quis magnam quas id. Veritatis dolorem voluptates. Hic est repellendus dignissimos debitis iste vel earum.
      </p>
      <p>
         
Velit possimus et quo. Odit similique et odit soluta qui illum temporibus. Doloremque sunt praesentium.
      </p>
      <p>
         
Aut et qui dolor quam vel. Qui exercitationem eius nulla praesentium voluptas at ipsam aut quidem. Sapiente qui qui nostrum voluptates sit dolor totam tempora enim. Doloribus autem perferendis sequi quia repellat mollitia perspiciatis.
      </p>
      <p>
         
Blanditiis omnis nihil asperiores dicta ipsam est voluptatem. Architecto non pariatur voluptatem ipsam deleniti explicabo perferendis amet. Voluptatem labore quas ut quod qui quia voluptatibus blanditiis pariatur. Aut voluptate perferendis aut maxime voluptates sint ratione.
      </p>
      <p>
         
Officia nihil incidunt totam repellendus eum doloremque explicabo aut. Nam saepe tempore laborum ipsa. Non adipisci corrupti nostrum dignissimos in accusantium repudiandae suscipit voluptatum. Consequatur nemo asperiores harum excepturi soluta dolor fuga odit nostrum. Sunt exercitationem nihil ipsam eum voluptatem. Sunt ad hic sint quis.
      </p>
      <p>
         
Facere sed similique sunt et est ad voluptas. Libero et quis aut quam sint laboriosam fugit mollitia aut. Laudantium ex et. Repudiandae dolore magni a nobis sunt sint. Velit iste rerum voluptatem qui.
      </p>
      <p>
         
Harum ut qui. Ut facilis enim est voluptate voluptas nisi. Veritatis officiis facere. Magni eveniet iusto. Exercitationem qui possimus eligendi nisi quis sapiente omnis reiciendis fugiat. Nesciunt nobis et dolorum voluptate cum et.
      </p>
      <p>
         
Eum saepe quas magnam. Id ipsam vel. Recusandae hic velit ut. Eaque tempora cumque et ex enim tempore. Magnam molestiae qui voluptatum ipsum perferendis consectetur delectus voluptas nobis. Quos ut id culpa aut eum nesciunt rem.
      </p>
      <p>
         
Ab suscipit cumque rerum et tempora impedit quia natus voluptates. Totam placeat sint deserunt magni velit minus consequatur ratione. Quaerat et impedit tempora officia molestias. Autem placeat quas consequatur. Adipisci est at dolorum nulla.
      </p>
      <p>
         
Similique aperiam dignissimos eos ut aut. Voluptatum sit est aut suscipit voluptatum sint nulla. Eum magnam sit et ut neque.
      </p>
      <p>
         
Assumenda unde dolores at non minus dolorum dolorum minima voluptatem. Doloribus voluptatibus reprehenderit praesentium. Occaecati et et quia architecto ratione. Expedita et quia earum vel dolores. Saepe veritatis et. Maiores occaecati temporibus sed eum distinctio.
      </p>
      <p>
         
Consequatur non quas cupiditate voluptatibus alias delectus blanditiis laborum itaque. Accusantium aut voluptatem dolores. Corporis illum suscipit ut fugiat.
      </p>
      <p>
         
Beatae sunt aut. Et velit est veritatis eveniet perspiciatis. Et ullam asperiores dolor et tempora.
      </p>
      <p>
         
Nesciunt dolorem quia. Nam consequatur delectus soluta voluptates sint dignissimos dolores quasi nam. Reiciendis quam velit voluptatem nam illum vel non.
      </p>
      <p>
         
Id est animi vero libero recusandae. Sit atque sit voluptatem sit. Reiciendis corporis aspernatur nemo. Illum et ipsa aut odio vero provident soluta porro ratione. Laboriosam est officiis. Qui quas voluptatem atque autem nam aliquam eum unde.
      </p>
      <p>
         
Omnis iusto optio iste aut omnis aspernatur sed est ducimus. Et quo et et cumque et sapiente. Officia doloribus accusamus dicta asperiores quo cum. Nobis est sit. Laudantium aut id repellendus nisi est. Laborum voluptatem vero.
      </p>
      <p>
         
Aperiam aut corrupti similique aut earum. Aut quisquam voluptatem eos aspernatur placeat omnis sit velit. Quaerat perferendis exercitationem iste magnam ut. Odio totam sed doloremque illum aut sit. Voluptas voluptatem perferendis incidunt.
      </p>
      <p>
         
Accusantium ut qui qui accusantium cum iure dolor. Veritatis voluptates natus omnis aspernatur sint quae. Veritatis autem assumenda. Optio quia iusto necessitatibus hic qui.
      </p>
      <p>
         
Omnis repellendus qui vel. Ut non qui sunt nihil tenetur aut et consequatur. At modi quis quo et vitae dignissimos adipisci error pariatur. Suscipit laborum quis cupiditate neque voluptas. Delectus voluptatem nostrum dicta sequi dolor voluptas ut.
      </p>
      <p>
         
Non et quia hic recusandae. Facere ad tenetur. Dicta saepe corrupti rerum et rem odio amet. Ea ipsum earum dolore labore nihil eos ipsam. Facilis possimus dolorem qui ea illo voluptas doloremque minima.
      </p>
      <p>
         
Aut aperiam facilis ratione beatae aut. In ut et recusandae illo qui natus quis facere enim. Aut praesentium at harum non eum animi. Consequatur molestiae et at voluptatibus id laboriosam.
      </p>
      <p>
         
Ullam et placeat omnis nostrum officiis sint veniam corrupti. Quae suscipit sunt natus. Ut occaecati laudantium doloremque nam autem tempora. Porro id voluptates minus id eum. Ea ipsa impedit blanditiis quam molestiae est. Ut maiores illo repudiandae.
      </p>
      <p>
         
Libero consectetur vitae saepe accusantium impedit alias libero magni laudantium. Vitae vero reprehenderit et. Et provident ut et. Dolores quibusdam magnam iure iure quod. Voluptatem ut necessitatibus maxime.
      </p>
      <p>
         
Qui aut doloribus nulla. In aut distinctio sit. Dolores ipsa cum.
      </p>
      <p>
         
Ipsum non beatae ut voluptas ipsam rerum. Aspernatur laudantium saepe nihil rem tempora. Possimus fugiat amet corporis reiciendis a tenetur in in earum. Magnam qui atque ut est placeat mollitia possimus libero rerum. Praesentium veritatis deserunt.
      </p>
      <p>
         
Molestias quas ex eligendi aut quaerat nostrum. Accusamus occaecati voluptate. Ea non vel laborum laudantium commodi. Nemo aperiam cum placeat in autem fugiat. Omnis quia ut.
      </p>
      <p>
         
Dolor neque unde. Illo impedit molestias non temporibus accusantium rerum. Quae omnis dignissimos et minus nostrum maiores molestias quaerat. Et fuga ut perferendis sit molestias cumque voluptatibus. Incidunt et blanditiis. Consequatur est ut consequatur.
      </p>
      <p>
         
Est dicta qui sunt. Ut pariatur sequi nostrum recusandae alias sint sed cumque at. Voluptates distinctio quia voluptatum necessitatibus sed dolores ad. Et et ut dolorem non non velit aut qui vel.
      </p>
      <p>
         
Quos fugiat voluptas doloribus suscipit cupiditate vitae mollitia veritatis quasi. Qui dolorem ipsam quod sint. Sit voluptas rerum quia labore ut culpa et. Adipisci aspernatur voluptatem ipsam qui maiores ut.
      </p>
      <p>
         
Dolorem natus quisquam est ut et. Nobis modi consequatur quasi esse. Quia cupiditate et quisquam nulla veritatis minima nulla omnis. Libero sed omnis et ut mollitia voluptates. Exercitationem quo dolor culpa libero.
      </p>
      <p>
         
Et sit veritatis aut facilis consequuntur. Non qui ut aut magni vero eum eos. Aut quasi est odit repellendus officia quibusdam. Neque voluptatem veritatis. Quidem consequatur suscipit ea quaerat ut magni nam vero velit. Quas quo beatae iste qui ab fuga.
      </p>
      <p>
         
Illum consequatur consectetur atque repudiandae corporis voluptatem. Nihil blanditiis distinctio et et ex. Nulla illum inventore molestias aut quia beatae numquam quia.
      </p>
      <p>
         
Sunt odit ut occaecati quos modi autem. Laborum omnis asperiores debitis et eligendi. Reprehenderit ipsa necessitatibus voluptate ea possimus. Alias tenetur fugiat quia quaerat aut consequatur quisquam et. Autem aut deleniti voluptatem dignissimos optio commodi vel vitae. Nihil dolor quos occaecati eius tempora dolorem libero dolores.
      </p>
      <p>
         
Quia aspernatur ducimus in. Deleniti dolorum porro inventore doloribus fuga velit dolorem minus. Et molestiae qui deserunt quis voluptatem. Et sed voluptatem blanditiis aut. Minus minima illo qui maiores rem fugiat.
      </p>
      <p>
         
Qui nihil earum veniam cupiditate facilis est eos. Occaecati nisi voluptatem neque eos sit blanditiis. Eos natus sit accusantium. Voluptatem sed ipsa. Nobis ab excepturi ipsam saepe sapiente et.
      </p>
    </div>
  </div>
</div>
`;
